--- a/get-key.html
+++ b/get-key.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://go.linkify.ru/2A6y">
+    <meta http-equiv="refresh" content="0; url=https://go.linkify.ru/2B7B">
     <title>Redirecting to Get Key</title>
     <style>
         body {
