--- a/get-key.html
+++ b/get-key.html
@@ -41,7 +41,7 @@
     <div class="container">
         <div class="spinner"></div>
         <h1>Redirecting to Get Key page...</h1>
-        <p>If you are not redirected automatically, <a href="https://go.linkify.ru/2A6y">click here</a>.</p>
+        <p>If you are not redirected automatically, <a href="https://go.linkify.ru/2B7B">click here</a>.</p>
     </div>
 </body>
 </html>
