--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
             <a href="https://discord.gg/DPCKQRJmdF" class="btn btn-discord">
                 <i class="fab fa-discord"></i> Discord Server
             </a>
-            <a href="https://solarahub.space/get-key.html" class="btn btn-key">
+            <a href="get-key.html" class="btn btn-key">
                 <i class="fas fa-key"></i> Get Key
             </a>
             <button class="btn btn-copy" id="copyScriptBtn">
