--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <h1 class="title">Farewell Message</h1>
         
         <p class="message">
-            Let's cut to the chase: we will no longer continue offering Solara Hub. We have shut down the software's services as of this announcement, and Solara Hub was fully deleted.
+            Let's cut to the chase: we will no longer continue offering Solara Hub. We have shut down the software's services as of this announcement, and Solara Hub will be fully deleted soon.
         </p>
         
         <p class="message">
