--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solara Hub | Ultimate Roblox Experience</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌌</text></svg>">
+    <title>Solara Hub | Best Roblox Scripthub</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -796,7 +796,7 @@
             <div class="nav-links">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#features" class="nav-link">Features</a>
-                <a href="#screenshot" class="nav-link">Screenshots</a>
+                <a href="#screenshot" class="nav-link">Hub Screenshot</a>
                 <a href="#get-started" class="nav-link">Get Started</a>
                 <a href="#discord" class="nav-link">Community</a>
             </div>
@@ -861,7 +861,7 @@
         </section>
 
         <section class="features-section" id="features">
-            <h2 class="section-title">Premium Features</h2>
+            <h2 class="section-title">Features</h2>
             <p class="tagline" style="text-align: center; margin-bottom: 4rem;">Discover what makes Solara Hub the ultimate choice for Roblox enthusiasts. Powerful features designed to enhance your gaming experience.</p>
             
             <div class="features-grid">
@@ -886,7 +886,7 @@
                         <i class="fas fa-unlock"></i>
                     </div>
                     <h3 class="feature-title">Free Key System</h3>
-                    <p class="feature-description">Access powerful scripts with our easy key system. Get your key and unlock all features without any cost or hidden fees.</p>
+                    <p class="feature-description">Access powerful scripts with our easy key system. Get your key and unlock all features without any cost.</p>
                 </div>
                 
                 <div class="feature-card">
