--- a/get-key.html
+++ b/get-key.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://go.linkify.ru/2B7B">
+    <meta http-equiv="refresh" content="0; url=https://go.linkify.ru/2BqA">
     <title>Redirecting to Get Key</title>
     <style>
         body {
@@ -41,7 +41,7 @@
     <div class="container">
         <div class="spinner"></div>
         <h1>Redirecting to Get Key page...</h1>
-        <p>If you are not redirected automatically, <a href="https://go.linkify.ru/2B7B">click here</a>.</p>
+        <p>If you are not redirected automatically, <a href="https://go.linkify.ru/2BqA">click here</a>.</p>
     </div>
 </body>
 </html>
